--- a/mySite/src/pages/leftMenu/index.less
+++ b/mySite/src/pages/leftMenu/index.less
@@ -1,14 +1,23 @@
-.left-menu {
-  .ant-menu-submenu-title {
-    padding-left: 2px !important;
-    .ant-menu-title-content{
-      margin-left: 2px;
+
+.ant-layout-sider {
+  z-index: 34;
+
+  .left-menu {
+    .ant-menu-submenu-title {
+      padding-left: 2px !important;
+
+      .ant-menu-title-content {
+        margin-left: 2px;
+      }
     }
-  }
-  .ant-menu{
-    .ant-menu-item{
-      padding-left: 0;
-      text-align: right;
+
+    .ant-menu {
+      .ant-menu-item {
+        padding-left: 0;
+        text-align: right;
+      }
     }
   }
 }
+
+
