--- a/mySite/src/pages/mainArticle/index.less
+++ b/mySite/src/pages/mainArticle/index.less
@@ -1,9 +1,13 @@
-.post-header {
-  line-height: 32px;
-  font-size: 18px;
-  display: block;
-  .post-title {
-    font-weight: 700;
-    color: #16a085;
+.post-title {
+  font-size: 16px;
+  font-weight: 700;
+  color: #16a085;
+  cursor: pointer;
+  span{
+    color:#999 ;
+    margin-left: 5px;
   }
+}
+.ant-timeline-item-tail{
+  border-left: 2px solid #16a085;
 }
